Readme and index.html update

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin CH Chong Website Portfolio</title>
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
     <header></header>
     <main>
         <section>
-            <a href="Version0/index.html" target="_blank"></a>
+            <a href="Version0/index.html">Version 0</a>
+            <a href="Version1/index.html">Version 1</a>
+            <a href="Version2/index.html">Version 2</a>
         </section>
     </main>
     <footer></footer>
