--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
         <section>
-            <a href="Version0/index.html">Version 0</a>
+            <h2><a href="Version0/index.html">Version 0</a></h2>
             <a href="Version1/index.html">Version 1</a>
             <a href="Version2/index.html">Version 2</a>
         </section>
