--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <header></header>
     <main>
         <section>
-            <h2><a href="Version0/index.html">Version 0</a></h2>
-            <a href="Version1/index.html">Version 1</a>
-            <a href="Version2/index.html">Version 2</a>
+            <h2>Different version of the Portfolio Websites</h2>
+            <ul>
+              <li><a href="Version0/index.html">Version 0</a></li>
+              <li><a href="Version1/index.html">Version 1</a></li>
+              <a href="Version2/index.html">Version 2</a>
+            </ul>
         </section>
     </main>
     <footer></footer>
