--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
               <li><a href="Version0/index.html">Version 0</a></li>
               <li><a href="Version1/index.html">Version 1</a></li>
-              <a href="Version2/index.html">Version 2</a>
+              <li><a href="Version2/index.html">Version 2</a></li>
             </ul>
         </section>
     </main>
