--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+      <section></section>
+    </header>
     <main>
         <section>
             <h2>Different version of the Portfolio Websites</h2>
@@ -17,6 +19,7 @@
               <li><a href="Version0/index.html">Version 0</a></li>
               <li><a href="Version1/index.html">Version 1</a></li>
               <li><a href="Version2/index.html">Version 2</a></li>
+              <li><a href="Version3/index.html">Version 3</a></li>
             </ul>
         </section>
     </main>
