Update on the primary page

--- a/index.html
+++ b/index.html
@@ -16,11 +16,28 @@
         <section>
             <h2>Different version of the Portfolio Websites</h2>
             <ul>
-              <li><a href="Version0/index.html">Version 0</a></li>
-              <li><a href="Version1/index.html">Version 1</a></li>
-              <li><a href="Version2/index.html">Version 2</a></li>
-              <li><a href="Version3/index.html">Version 3</a></li>
+              <li><a href="Version0/index.html">Version 0</a> - Work in Progress
+              </li>
+              <li><a href="Version1/index.html">Version 1</a> - Pending
+              </li>
+              <li><a href="Version2/index.html">Version 2</a> - Pending
+              </li>
+              <li><a href="Version3/index.html">Version 3</a> - Pending
+              </li>
             </ul>
+        </section>
+
+        <section>
+          <article>
+            <h2>Current Webpage Setup</h2>
+            <p>
+              W3.CSS will be used and the planning of the respective projects
+              will be diverted on this page, however, access will be available
+              to author only with the login and registration system (feature yet
+              to explore). The respective projects will be showcased in the
+              portfolio websites.
+            </p>
+          </article>
         </section>
     </main>
     <footer></footer>
