--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <article>
             <h2>Current Webpage Setup</h2>
             <p>
-              W3.CSS will be used and the planning of the respective projects
+              W3.CSS will be used (pending) and the planning of the respective projects
               will be diverted on this page, however, access will be available
               to author only with the login and registration system (feature yet
               to explore). The respective projects will be showcased in the
