--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section class="w3-container">
-          <h2>Development Logs</h2>
+          <h2>Websites Development Logs</h2>
           <ul class="w3-ul w3-small">
             <li><div class="w3-card-4">
               <h5>September 15, 2021</h5>
