--- a/Version0/index.html
+++ b/Version0/index.html
@@ -39,7 +39,7 @@
           </ul>
         </div>
 
-        <div class="menu-bottom">
+        <div class="menu-bottom" style="display: none;">
           <p style="color: white; border-bottom-color: white;
           border-bottom-style:solid; border-bottom-color: white;">Projects</p>
           <ul class="menu-items">
