--- a/Version1/index.html
+++ b/Version1/index.html
@@ -13,6 +13,17 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active" id="home">
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="img/hero.png" alt="">
+                </div>
+            </div>
+            <div class="right-header">
+
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sec2 about" id="about"></section>
