--- a/Version1/index.html
+++ b/Version1/index.html
@@ -17,11 +17,26 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/pic1.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
-
+                <h1 class="name">
+                    Hi, I'm <span>Chong Chia-Hsing (Justin).</span> 
+                    An Associate Consultant (Splunk Expert)
+                </h1>
+                <p>
+                    I'm a developer and problem solver. I'm currently being employed as an Associate Consultant 
+                    at <a href="https://www.isatec.com">Isatec Sdn. Bhd.</a> for providing consultation and IT
+                    SLA support for customer in relation to Splunk APM software system. My previous employments 
+                    as Equipment Engineer and System Engineer at <a href="https://sunpower.maxeon.com">Maxeon Solar Technologies</a> and
+                    <a href="https://www.sermax.my/">Sermax Sdn. Bhd.</a> also allow me to adopt the skills and knowledge
+                    for PLC and SCADA programming in industrial automation by being a project developer, deployer, and tester. 
+                </p>
+                <a href="" class="main-btn">
+                    <span class="btn-text">Download CV</span>
+                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                </a>
             </div>
         </div>
     </header>
