update 20220430-1 Button transition animation for Download CV

--- a/Version1/index.html
+++ b/Version1/index.html
@@ -33,10 +33,13 @@
                     <a href="https://www.sermax.my/">Sermax Sdn. Bhd.</a> also allow me to adopt the skills and knowledge
                     for PLC and SCADA programming in industrial automation by being a project developer, deployer, and tester. 
                 </p>
-                <a href="" class="main-btn">
-                    <span class="btn-text">Download CV</span>
-                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                </a>
+                <div class="btn-cont">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
+                
             </div>
         </div>
     </header>
