--- a/Version1/index.html
+++ b/Version1/index.html
@@ -44,7 +44,56 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>
+                    About <span>me</span> <span class="bg-text">my stats</span>
+                </h2>
+            </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <h4>Information About Me</h4><br>
+                    <p>
+                        Engineer with knowledge and experience in PLC and SCADA programming for industrial
+                        automation. As a result of the job requirement as a system engineer, practical experience
+                        had been gained for algorithm design (Control Logic) and features creation (Graphics)
+                        in liaison with the customer or end user for the projects. Furthermore, commissioning,
+                        deployment, and technical documentation for the success of the projects are to be
+                        expected from my position as the developer of the automation program. Currently, my job as
+                        an equipment engineer requires me to have project management skills with the capability
+                        to liaise between different departments for the setup of the AGV system. It also requires me
+                        to liaise with vendors from China to achieve the project goal where technical
+                        communication is a challenge with the technical terms used in Mandarin.
+                    </p><br>
+                    <p>
+                        Personal growth is vital for social mobility with my attempts at website development
+                        related skills. These skills are the HTML, CSS, and Javascript programming languages
+                        mastery. On top of the basic languages, front-end framework, Angular, Node.js, and 
+                        PHP Laravel are explored with future plans for back-end related exploration and  development.
+                    </p><br>
+                    <p>
+                        My physics knowledge and skills gained from degree education also prepared me for
+                        a potential research-based position. In addition, it also helps me to be a good problem
+                        solver as evidenced by the projects done during my position as system engineer for
+                        industrial automation.
+                    </p><br>
+                    <div class="btn-cont">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Projects <br> Completed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
