--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 w3-border w3-border-black">Version 0</a> - Work in Progress
               </li>
               <li><a href="Version1/index.html" 
-                class="w3-button w3-gray w3-hover-dark-gray 
-                w3-border w3-border-black">Version 1</a> - Pending
+                class="w3-button w3-green w3-hover-light-green 
+                w3-border w3-border-black">Version 1</a> - Work in Progress
               </li>
               <li><a href="Version2/index.html" 
                 class="w3-button w3-gray w3-hover-dark-gray 
