--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
             <ul class="w3-ul">
               <li><a href="Version0/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Version 0</a> - Work in Progress
+                w3-border w3-border-black">Version 0</a> Basic usage of HTML and CSS for portfolio website. 
               </li>
               <li><a href="Version1/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Version 1</a> - Work in Progress
+                w3-border w3-border-black">Version 1</a> - Advanced usage of Sass CSS and Javascript for dynamic portfolio website. 
+                Font awesome library (version 5.15.4) is added with link from cdnjs and Google Fonts are also used. 
               </li>
               <li><a href="Version2/index.html" 
                 class="w3-button w3-gray w3-hover-dark-gray 
