--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </li>
               <li><a href="Version1/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Version 1</a> - Advanced usage of Sass CSS and Javascript for dynamic portfolio website. 
+                w3-border w3-border-black">Version 1</a> - Advanced usage of Sass CSS and Javascript for dynamic content of portfolio website. 
                 Font awesome library (version 5.15.4) is added with link from cdnjs and Google Fonts are also used. 
               </li>
               <li><a href="Version2/index.html" 
