--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
             <ul class="w3-ul">
               <li><a href="Version0/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Version 0</a> Basic usage of HTML and CSS for portfolio website. 
+                w3-border w3-border-black">Website 0</a> Basic usage of HTML and CSS for portfolio website. 
               </li>
               <li><a href="Version1/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Version 1</a> - Advanced usage of Sass CSS and Javascript for dynamic content of portfolio website. 
+                w3-border w3-border-black">Website 1</a> - Advanced usage of Sass CSS and Javascript for dynamic content of portfolio website. 
                 Font awesome library (version 5.15.4) is added with link from cdnjs and Google Fonts are also used. 
               </li>
               <li><a href="Version2/index.html" 
                 class="w3-button w3-gray w3-hover-dark-gray 
-                w3-border w3-border-black">Version 2</a> - Pending
+                w3-border w3-border-black">Website 2</a> - Pending
               </li>
               <li><a href="Version3/index.html" 
                 class="w3-button w3-gray w3-hover-dark-gray 
-                w3-border w3-border-black">Version 3</a> - Pending
+                w3-border w3-border-black">Website 3</a> - Pending
               </li>
             </ul>
         </section>
@@ -61,6 +61,12 @@
                 to author only with the login and registration system (feature yet
                 to explore). The respective projects will be showcased in the
                 portfolio websites.</p>
+            </div></li>
+            <li><div class="w3-card-4">
+              <h5>April 30, 2022</h5>
+              <p>Concern for the current directory structure of the websites with the coming development plan for exploring Angular and other frameworks. 
+                Upon reaching 5 or more website developed, should consider reorganize current webpage for navigation to different websites and the codes.
+              </p>
             </div></li>
           </ul>
          
