changing folder names

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
 
     <main class="w3-theme">
         <section class="w3-container">
-            <h2>Portfolio / Resume / Curriculum Vitae Websites</h2>
+            <h2>Websites Inventory</h2>
             <ul class="w3-ul">
-              <li><a href="Version0/index.html" 
+              <li><a href="website0/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
                 w3-border w3-border-black">Website 0</a> Basic usage of HTML and CSS for portfolio website. 
               </li>
-              <li><a href="Version1/index.html" 
+              <li><a href="website1/index.html" 
                 class="w3-button w3-green w3-hover-light-green 
                 w3-border w3-border-black">Website 1</a> - Advanced usage of Sass CSS and Javascript for dynamic content of portfolio website. 
                 Font awesome library (version 5.15.4) is added with link from cdnjs and Google Fonts are also used. 
               </li>
-              <li><a href="Version2/index.html" 
+              <li><a href="website2/index.html" 
                 class="w3-button w3-gray w3-hover-dark-gray 
                 w3-border w3-border-black">Website 2</a> - Pending
               </li>
-              <li><a href="Version3/index.html" 
+              <li><a href="website3/index.html" 
                 class="w3-button w3-gray w3-hover-dark-gray 
                 w3-border w3-border-black">Website 3</a> - Pending
               </li>
