--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Justin CH Chong Meta Page</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
-    <script src="src/script.js" defer></script>
+    <link rel="stylesheet" href="styles/mystyles.css">
+    <script src="script.js" defer></script>
 </head>
 
-<body class="w3-theme">
+<body class="main-content w3-theme">
 
     <header class="w3-theme">
       <section>
@@ -18,17 +19,18 @@
         onclick="w3_open()">&#9776;</button>
       </section>
     </header>
-
     <div class="w3-sidebar w3-bar-block w3-animate-left w3-theme" style="display:none" id="mySidebar">
       <button class="w3-bar-item w3-button w3-large"
       onclick="w3_close()">Close &times;</button>
       <a href="#" class="w3-bar-item w3-button">Link 1</a>
       <a href="#" class="w3-bar-item w3-button">Link 2</a>
       <a href="#" class="w3-bar-item w3-button">Link 3</a>
+      <button class="w3-bar-item w3-button mySidebar-btn" data-cls="myProjects">Projects</button>
+      <button class="w3-bar-item w3-button mySidebar-btn" data-cls="myWebsites">Websites</button>
     </div>
 
-    <main class="w3-theme">
-        <section class="w3-container">
+    <main class="w3-theme" onclick="w3_close()">
+        <section class="section w3-container myWebsites sec1 active" id="myWebsites">
             <h2>Websites Inventory</h2>
             <ul class="w3-ul">
               <li><a href="website0/index.html" 
@@ -50,8 +52,7 @@
               </li>
             </ul>
         </section>
-
-        <section class="w3-container">
+        <section class="section w3-container myWebsites sec2 active" id="myWebsitesDevLogs">
           <h2>Websites Development Logs</h2>
           <ul class="w3-ul w3-small">
             <li><div class="w3-card-4">
@@ -69,12 +70,10 @@
               </p>
             </div></li>
           </ul>
-         
-
         </section>
-
+        <section class="section w3-container myProjects sec3">
+        </section>
     </main>
-
 
     <footer class="w3-theme">
     </footer>
