--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin CH Chong Meta Page</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
     <link rel="stylesheet" href="styles/mystyles.css">
     <script src="script.js" defer></script>
 </head>
@@ -31,26 +31,26 @@
 
     <main class="w3-theme" onclick="w3_close()">
         <section class="section w3-container myWebsites sec1 active" id="myWebsites">
-            <h2>Websites Inventory</h2>
-            <ul class="w3-ul">
-              <li><a href="website0/index.html" 
-                class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Website 0</a> Basic usage of HTML and CSS for portfolio website. 
-              </li>
-              <li><a href="website1/index.html" 
-                class="w3-button w3-green w3-hover-light-green 
-                w3-border w3-border-black">Website 1</a> - Advanced usage of Sass CSS and Javascript for dynamic content of portfolio website. 
-                Font awesome library (version 5.15.4) is added with link from cdnjs and Google Fonts are also used. 
-              </li>
-              <li><a href="website2/index.html" 
-                class="w3-button w3-gray w3-hover-dark-gray 
-                w3-border w3-border-black">Website 2</a> - Pending
-              </li>
-              <li><a href="website3/index.html" 
-                class="w3-button w3-gray w3-hover-dark-gray 
-                w3-border w3-border-black">Website 3</a> - Pending
-              </li>
-            </ul>
+          <h2>Websites Inventory</h2>
+          <ul class="w3-ul">
+            <li><a href="website0/index.html" 
+              class="w3-button w3-green w3-hover-light-green 
+              w3-border w3-border-black">Website 0</a> Basic usage of HTML and CSS for portfolio website. 
+            </li>
+            <li><a href="website1/index.html" 
+              class="w3-button w3-green w3-hover-light-green 
+              w3-border w3-border-black">Website 1</a> - Advanced usage of Sass CSS and Javascript for dynamic content of portfolio website. 
+              Font awesome library (version 5.15.4) is added with link from cdnjs and Google Fonts are also used. 
+            </li>
+            <li><a href="website2/index.html" 
+              class="w3-button w3-gray w3-hover-dark-gray 
+              w3-border w3-border-black">Website 2</a> - Pending
+            </li>
+            <li><a href="website3/index.html" 
+              class="w3-button w3-gray w3-hover-dark-gray 
+              w3-border w3-border-black">Website 3</a> - Pending
+            </li>
+          </ul>
         </section>
         <section class="section w3-container myWebsites sec2 active" id="myWebsitesDevLogs">
           <h2>Websites Development Logs</h2>
@@ -72,7 +72,19 @@
           </ul>
         </section>
         <section class="section w3-container myProjects sec3">
+          <h2>Projects Inventory</h2>
+          <ul class="w3-ul">
+            <li>Project 1 
+            </li>
+            <li>Project 2
+            </li>
+            <li>Project 3
+            </li>
+            <li>project 4
+            </li>
+          </ul>
         </section>
+
     </main>
 
     <footer class="w3-theme">
