--- a/website1/index.html
+++ b/website1/index.html
@@ -55,27 +55,36 @@
                     <h4>Information About Me</h4><br>
                     <p>
                         Engineer with knowledge and experience in PLC and SCADA programming for industrial
-                        automation. As a result of the job requirement as a system engineer, practical experience
+                        automation. As a result of the job requirement as a system engineer (2019-2021), practical experience
                         had been gained for algorithm design (Control Logic) and features creation (Graphics)
                         in liaison with the customer or end user for the projects. Furthermore, commissioning,
                         deployment, and technical documentation for the success of the projects are to be
-                        expected from my position as the developer of the automation program. Currently, my job as
-                        an equipment engineer requires me to have project management skills with the capability
+                        expected from my position as the developer of the automation program. During my time as
+                        an equipment engineer (2021-2022), it requires me to have project management skills with the capability
                         to liaise between different departments for the setup of the AGV system. It also requires me
                         to liaise with vendors from China to achieve the project goal where technical
                         communication is a challenge with the technical terms used in Mandarin.
                     </p><br>
                     <p>
+                        My current employment as an Associate Consultant (2022-present) equipped me with the IT related skills
+                        with relation to the operation and maintenance of the virtual machines that are used for the 
+                        production or hosting of the Splunk system for the customer. These skills involve the remote control,
+                        security, and command line instruction of the linux system for the configuration of the Splunk software. 
+                        Furthermore, data ingestion, dashboard and visualization for the business analytics, and the root cause
+                        analysis in relation to the IT assets are to be expected from the consultancy position.
+                    </p><br>
+                    <p>
                         Personal growth is vital for social mobility with my attempts at website development
                         related skills. These skills are the HTML, CSS, and Javascript programming languages
-                        mastery. On top of the basic languages, front-end framework, Angular, Node.js, and 
-                        PHP Laravel are explored with future plans for back-end related exploration and  development.
+                        mastery. On top of the basic languages, front-end framework-Angular, and back-end framework-Laravel
+                         are explored with aim to familiarise the webdev industry.
                     </p><br>
                     <p>
                         My physics knowledge and skills gained from degree education also prepared me for
                         a potential research-based position. In addition, it also helps me to be a good problem
                         solver as evidenced by the projects done during my position as system engineer for
-                        industrial automation.
+                        industrial automation and my capability to pick up new skills and practice such skills in 
+                        the industrial settings.
                     </p><br>
                     <div class="btn-cont">
                         <a href="" class="main-btn">
@@ -87,9 +96,113 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">560+</p>
+                            <p class="large-text">10+</p>
                             <p class="small-text">Projects <br> Completed</p>
                         </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">2+</p>
+                            <p class="small-text">Years of <br> experience</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <!-- <p class="large-text">10+</p>
+                            <p class="small-text">Projects <br> Completed</p> -->
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <!-- <p class="large-text">10+</p>
+                            <p class="small-text">Projects <br> Completed</p> -->
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <!-- <p class="large-text">10+</p>
+                            <p class="small-text">Projects <br> Completed</p> -->
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <!-- <p class="large-text">10+</p>
+                            <p class="small-text">Projects <br> Completed</p> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-stats">
+                <h4 class="stats-title">My Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title">html5</p>
+                        <div class="progress-con">
+                            <p class="prog text">90%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">css</p>
+                        <div class="progress-con">
+                            <p class="prog text">60%</p>
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">javascript</p>
+                        <div class="progress-con">
+                            <p class="prog text">40%</p>
+                            <div class="progress">
+                                <span class="javascript"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">python</p>
+                        <div class="progress-con">
+                            <p class="prog text">50%</p>
+                            <div class="progress">
+                                <span class="python"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-timeline">
+                <h4 class="timeline-title">My Timeline</h4>
+                <div class="timeline-items">
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2019 - 2021</p>
+                        <h5>System Engineer<span> - Sermax</span></h5>
+                        <p>
+                            To create and develop the programming logic and algorithm in relation to the 
+                            requirement provided by customer for automating mechanical, electrical or digital 
+                            system of manufacturing or construction industry. These systems range from gas detector
+                            control panel to HVAC control system. The tools or products involve for such industrial 
+                            automation are Programmable Logic Controller (PLC) and Supervisory Control and Data Acquisition 
+                            (SCADA) where the brands Siemens, ABB, and Schneider Electrics are used. The PLC programming languages 
+                            that were in use are Structured Text (ST), Ladder (LD), Function Block Diagram (FBD), and 
+                            Sequential Function Chart (SFC). Coding strategies deployed are object-oriented programming (OOP) and 
+                            system-of-systems. 
+                        </p>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2021 - 2022</p>
+                        <h5>Equipment Engineer<span> - Maxeon Solar Technologies</span></h5>
+                        <p>
+                            
+                        </p>
                     </div>
                 </div>
             </div>
