--- a/website1/index.html
+++ b/website1/index.html
@@ -180,6 +180,26 @@
                         <div class="tl-icon">
                             <i class="fas fa-briefcase"></i>
                         </div>
+                        <p class="tl-duration">2022 - present</p>
+                        <h5>Associate Consultant<span> - Isatec Sdn. Bhd.</span></h5>
+                        <p>
+
+                        </p>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2021 - 2022</p>
+                        <h5>Equipment Engineer<span> - Maxeon Solar Technologies</span></h5>
+                        <p>
+                            testetststs
+                        </p>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
                         <p class="tl-duration">2019 - 2021</p>
                         <h5>System Engineer<span> - Sermax</span></h5>
                         <p>
@@ -192,16 +212,6 @@
                             that were in use are Structured Text (ST), Ladder (LD), Function Block Diagram (FBD), and 
                             Sequential Function Chart (SFC). Coding strategies deployed are object-oriented programming (OOP) and 
                             system-of-systems. 
-                        </p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="tl-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </div>
-                        <p class="tl-duration">2021 - 2022</p>
-                        <h5>Equipment Engineer<span> - Maxeon Solar Technologies</span></h5>
-                        <p>
-                            
                         </p>
                     </div>
                 </div>
