--- a/website1/index.html
+++ b/website1/index.html
@@ -47,7 +47,7 @@
         <section class="section sec2 about" id="about">
             <div class="main-title">
                 <h2>
-                    About <span>me</span> <span class="bg-text">my stats</span>
+                    About <span>Me</span> <span class="bg-text">My Stats</span>
                 </h2>
             </div>
             <div class="about-container">
@@ -180,7 +180,7 @@
                         <div class="tl-icon">
                             <i class="fas fa-briefcase"></i>
                         </div>
-                        <p class="tl-duration">2022 - present</p>
+                          <p class="tl-duration">2022 - present</p>
                         <h5>Associate Consultant<span> - Isatec Sdn. Bhd.</span></h5>
                         <p>
 
@@ -201,7 +201,7 @@
                             <i class="fas fa-briefcase"></i>
                         </div>
                         <p class="tl-duration">2019 - 2021</p>
-                        <h5>System Engineer<span> - Sermax</span></h5>
+                        <h5>System Engineer<span> - Sermax Automation Sdn. Bhd.</span></h5>
                         <p>
                             To create and develop the programming logic and algorithm in relation to the 
                             requirement provided by customer for automating mechanical, electrical or digital 
@@ -217,7 +217,61 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>
+                    My <span>Portfolio</span> <span class="bg-text">My Works</span>
+                </h2>
+            </div>
+            <p class="port-text">
+                Here is some of my work that I've done in various programming languages.
+            </p>
+            <div class="portfolio-items">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/portfolio1.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://www.github.com" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://www.youtube.com" target="_blank" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="https://www.twitter.com" target="_blank" class="icon">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/portfolio2.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="#" target="">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image"></div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="#" target="">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
