--- a/website1/index.html
+++ b/website1/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="main-content">
-    <header class="section sec1 header active" id="home">
+    <header class="section sec1 active" id="home">
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
@@ -44,7 +44,7 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about">
+        <section class="section sec2" id="about">
             <div class="main-title">
                 <h2>
                     About <span>Me</span> <span class="bg-text">My Stats</span>
@@ -217,7 +217,7 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio">
+        <section class="section sec3" id="portfolio">
             <div class="main-title">
                 <h2>
                     My <span>Portfolio</span> <span class="bg-text">My Works</span>
@@ -272,8 +272,25 @@
                 </div>
             </div>
         </section>
-        <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact"></section>
+        <section class="section sec4" id="blogs">
+            <div class="main-title">
+                <h2>
+                    My <span>Blogs</span> <span class="bg-text">My Blogs</span>
+                </h2>
+            </div>
+            <div class="blogs">
+                <div class="blog">
+                    <img src="img/blog1.jpg" alt="">
+                    <div class="blog-text">
+                        <h4>How to Create Your Own Website</h4>
+                        <p>
+                            testing testing testing testing
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section sec5" id="contact"></section>
     </main>
 
     <div class="controls">
