--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </li>
           </ul>
         </section>
-        <section class="section w3-container myWebsites sec2 active" id="myWebsitesDevLogs">
+        <!-- <section class="section w3-container myWebsites sec2 active" id="myWebsitesDevLogs">
           <h2>Websites Development Logs</h2>
           <ul class="w3-ul w3-small">
             <li><div class="w3-card-4">
@@ -70,7 +70,7 @@
               </p>
             </div></li>
           </ul>
-        </section>
+        </section> -->
         <section class="section w3-container myProjects sec3">
           <h2>Projects Inventory</h2>
           <ul class="w3-ul">
